<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/iconomundo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origen" />

            <Spinner
                android:id="@+id/spinnerorigen"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/destino" />

            <Spinner
                android:id="@+id/spinnerdestino"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode" />

            <Spinner
                android:id="@+id/spinnermode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonCalcula"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:text="Calcular Ruta" />

                <Button
                    android:id="@+id/buttonVer"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:visibility="invisible"
                    android:text="Ver Ruta" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/textViewDatoRuta1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>